Begin removing warnings and deprecated code